# TelegramArchiver

./: .replit  Pasted--Add-tags-table-CREATE-TABLE-IF-NOT-EXISTS-tags-id-SERIAL-PRIMARY-KEY-name-VARCHAR-2-1733808186715.txt  Pasted--Drop-existing-tables-DROP-TABLE-IF-EXISTS-media-CASCADE-DROP-TABLE-IF-EXISTS-channels-CASCADE--1733803814038.txt  Pasted--plugin-vite-react-babel-home-runner-TelegramArchiver-client-src-components-ChannelList-tsx-Unter-1733796899954.txt  Pasted--rest-express-1-0-0-dev-tsx-watch-clear-screen-false-server-index-ts-02-11-30-AM-express-1733796742849.txt  Pasted-import-Channel-Media-SystemLog-from-db-schema-const-API-BASE-api-Define-the-1733806716427.txt  Pasted-import-Channel-Media-SystemLog-from-db-schema-const-API-BASE-api-export-interf-1733806558071.txt  api_server.py  channel_diagnostic.py  check_media.py  database-manager.py  database_manager.py  index.html  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.js  telegram-monitor-core.py  telegram_monitor.py  theme.json  tsconfig.json
agent_assets/: docs_python-telegram-bot_org_en_v21.md  docs_python-telegram-bot_org_en_v21_9_examples.md  docs_python-telegram-bot_org_en_v21_9_telegram_bot.md  docs_python-telegram-bot_org_en_v21_9_telegram_inputmediaphoto.md  docs_python-telegram-bot_org_en_v21_9_telegram_inputmediavideo.md  github_com_python-telegram-bot_python-telegram-bot_wiki_Working-with-Files-and-Media.md
db/: schema.ts
scripts/: setup-storage.ts
server/: database-manager.ts  index.ts  media-manager.ts  routes.ts  setup-storage.ts  storage-manager.ts  (+1 more)
(+23 files in other folders)
