[project]
name = "repl-nix-telegramarchiver"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "datasetrising>=1.0.4",
    "fastapi>=0.115.6",
    "psycopg2-binary==2.9.9",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.1",
    "python-telegram-bot==21.9",
    "telegram>=0.0.1",
    "uvicorn>=0.32.1",
]
